Update 5: Add /articlesForLieferant endpoint
